Make it more mobile form factor friendly

--- a/index.html
+++ b/index.html
@@ -44,5 +44,23 @@
       <uskay-profile></uskay-profile>
     </div>
   </div>
+  <div class="my-grid-mobile">
+    <div class="large">
+      <uskay-profile></uskay-profile>
+    </div>
+    <div class="mid">
+      <uskay-profile></uskay-profile>
+    </div>
+    <div class="small">
+      <uskay-profile></uskay-profile>
+      <uskay-profile></uskay-profile>
+    </div>
+    <div class="tiny">
+      <uskay-profile></uskay-profile>
+      <uskay-profile></uskay-profile>
+      <uskay-profile></uskay-profile>
+      <uskay-profile></uskay-profile>
+    </div>
+  </div>
 </div>
 <script src="./main.js"></script>
